--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -93,7 +93,7 @@
                       <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='wet_lab' %}">
                         Wet Lab
                       </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinfo' %}">
+                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinformatics' %}">
                         Bioinformatics
                       </a>
                     </div>
@@ -136,7 +136,7 @@
                     <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='wet_lab' %}">
                       Wet Lab
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinfo' %}">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinformatics' %}">
                       Bioinformatics
                     </a>
                     <div class="d-flex mb-2">
