--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -95,7 +95,7 @@
                           <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='wet_lab' %}">
                             Wet Lab
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinfo' %}">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinformatics' %}">
                             Bioinformatics
                           </a>
                         </div>
@@ -138,7 +138,7 @@
                         <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='wet_lab' %}">
                           Wet Lab
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinfo' %}">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinformatics' %}">
                           Bioinformatics
                         </a>
                         <div class="d-flex mb-2">
