--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -80,15 +80,15 @@
                     {% if project.local_contexts_id %}
                     <h3>{{ project.project_label }}</h3>
                     <div class="row">
-                        <h5 id="lcProjectDetail" class="font-weight-bolder mt-3">Local Contexts' Project Detail (Notices and Labels)</h5>
-                        <div id="lcLoading" class="d-flex justify-content-center">
+                        <h5 class="font-weight-bolder mt-3">Local Contexts' Project Detail (Notices and Labels)</h5>
+                        <div id="lcLoading_{{ project.project_code|slugify }}" class="d-flex justify-content-center">
                             <button class="btn btn-primary" type="button" disabled>
                                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                                 Notices or Labels Loading...
                             </button>
                         </div>
-                        <span id="lcProjectId" hidden>{{ project.local_contexts_id }}</span>
-                        <span id="lcResponse"></span>
+                        <span id="lcProjectId_{{ project.project_code|slugify }}" hidden>{{ project.local_contexts_id }}</span>
+                        <span id="lcResponse_{{ project.project_code|slugify }}"></span>
                     </div>
                     <a href="{% url 'detail_localcontexts' project.pk %}">
                         {% if project.project_goals %}
