refactored all occurrences of Grant to Fund to generalize use for funding sources outside of grants across all modules

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -43,7 +43,7 @@
                       </td>
                         <td class="align-middle text-center">
                         <div class="d-flex align-items-center">
-                          <span class="me-2 text-xs">Grant or project code</span>
+                          <span class="me-2 text-xs">Fund or project code</span>
                         </div>
                       </td>
                     </tr>
