--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -23,6 +23,22 @@
           </div>
         </div>
       </div>
+      <span id="lcCollabSpan">
+        <div class="row">
+          <div class="col-md-8 mx-auto">
+            <div class="text-center">
+              <h2 class="text-white">Open to Collaborate</h2>
+                <div id="lcCollabLoading" class="d-flex justify-content-center">
+                  <button class="btn btn-primary" type="button" disabled>
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                      Collaboration Notice Loading...
+                  </button>
+                </div>
+                <span id="lcCollabResponse"></span>
+            </div>
+          </div>
+        </div>
+      </span>
     </div>
   </div>
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
