updated localcontext frontend page formatting

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <span id="lcCollabSpan">
-        <div class="row">
+        <div class="row mt-5">
           <div class="col-md-8 mx-auto">
             <div class="text-center">
                 <div id="lcCollabLoading" class="d-flex justify-content-center">
