added content to localcontexts frontend main page

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -47,12 +47,20 @@
           <div class="container">
               <div class="row">
                   <div class="col-md-8 col-12 my-auto">
-                      <h3>Local Contexts and Maine-eDNA</h3>
+                      <h3>Local Contexts Collaboration | Biocultural Notices and Labels</h3>
                       <p class="pe-md-5 mb-4">
-                          These samples are collected on traditional Wabanaki territory, Maine-eDNA is collaborating
-                          with <a href="https://localcontextshub.org" target="_blank">Local Contexts Hub</a> to document
-                          the Indigenous provenance of and rights to these data through the use of
-                          <a href="https://localcontexts.org/labels/biocultural-labels/" target="_blank">Biocultural Notices and Labels.</a> <br>
+                          Maine-eDNA is committed to maintaining Indigenous provenance of and future interests in data
+                          collected on Indigenous lands and waters. As part of our commitment to sharing and caring for
+                          data, Maine-eDNA is working with <a href="https://localcontexts.org/" target="_blank">Local Contexts</a>
+                          to openly collaborate with Wabanaki Tribal Nations through the use of Biocultural (BC) Notices
+                          and Labels. Maine-eDNA and Local Contexts are collaborating with Wabanaki Tribal Nations to
+                          develop BC Notices and Labels projects that also will be shared as models for the international community.<br>
+
+                          Local Contexts is an international organization founded in 2010 to “enhance and legitimize
+                          locally based decision-making and Indigenous governance frameworks for determining ownership,
+                          access, and culturally appropriate conditions for sharing historical, contemporary and future
+                          collections of cultural heritage and Indigenous data.”
+
                           <a href="https://localcontexts.org/" class="text-info icon-move-right" target="_blank">More about Local Contexts
                               <i class="fas fa-arrow-right text-sm ms-1"></i>
                           </a>
@@ -63,29 +71,80 @@
                           <img class="w-100 border-radius-lg shadow-lg p-2" style="background-color:#16A085" src="https://localcontexts.org/wp-content/uploads/2020/11/local-contexts-logo.png" alt="local contexts logo">
                       </a>
                   </div>
+              </div>
               <div class="row">
                   <div class="col-md-8 col-12 my-auto">
-                      <h3>University of Maine Land Acknowledgement</h3>
-                      <figure>
                       <p class="pe-md-5 mb-4">
-                          The University of Maine recognizes that it is located on Marsh Island in the homeland of the
-                          Penobscot Nation, where issues of water and territorial rights, and encroachment upon sacred
-                          sites, are ongoing. Penobscot homeland is connected to the other Wabanaki Tribal Nations — the
-                          Passamaquoddy, Maliseet, and Mi’kmaq — through kinship, alliances and diplomacy. The
-                          university also recognizes that the Penobscot Nation and the other Wabanaki Tribal Nations are
-                          distinct, sovereign, legal and political entities with their own powers of self-governance and
-                          self-determination. <br>
+                          Local Contexts enables the communication
+                          of <a href="https://localcontexts.org/labels/traditional-knowledge-labels/" target="_blank">Traditional Knowledge (TK)</a>
+                          and <a href="https://localcontexts.org/labels/biocultural-labels/" target="_blank">Biocultural (BC)</a> Labels
+                          and <a href="https://localcontexts.org/notices/aboutnotices/" target="_blank">Notices</a> between Indigenous
+                          communities and researchers. These human and machine readable digital tags support relationships
+                          between Indigenous communities, researchers, and institutions. They help communities, institutions and
+                          researchers in the management of intellectual and cultural property, cultural heritage,
+                          and environmental data within the digital environment. Traditional Knowledge and Biocultural
+                          Notices, applied by a researcher or institution, signal the right of Indigenous communities
+                          to define the use of information, collections, and data (including Digital Sequence Information,
+                          DSI) generated from biodiversity and genetic resources associated with traditional lands or waters.
                       </p>
-                          <figcaption class="blockquote-footer ps-3"><cite title="University of Maine Land Acknowledgement">University of Maine Land Acknowledgement</cite></figcaption>
-                          <a target="_blank" href="https://umaine.edu/about/university-of-maine-land-acknowledgement/" class="text-info icon-move-right">University of Maine Land Acknowledgement
-                              <i class="fas fa-arrow-right text-sm ms-1"></i>
-                          </a>
-                      </figure>
                   </div>
                   <div class="col-md-4 col-12 my-auto">
-                      <a target="_blank" href="https://umaine.edu/about/university-of-maine-land-acknowledgement/">
-                          <img class="w-100 border-radius-lg shadow-lg" src="https://umaine.edu/wp-content/uploads/sites/2/2020/06/land-header-1268x401.jpg" alt="University of Maine">
+                      <a target="_blank" href="https://localcontexts.org/labels/biocultural-labels/">
+                          <img class="w-100 border-radius-lg shadow-lg p-2" style="background-color:#16A085" src="https://localcontexts.org/wp-content/uploads/2020/11/BC-BLACK-NOTICE-20-AUG-2020.png" alt="biocultural label">
                       </a>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-12 col-12 my-auto">
+                      <p class="pe-md-5 mb-4">
+                          As participants in the Maine-eDNA Project, we respectfully acknowledge that we are conducting
+                          research on the Homelands of the Penobscot, Passamaquoddy, Maliseet, and Mi’kmaq Wabanaki
+                          Tribal Nations. When partnering with Tribal Nations, Maine-eDNA promotes data sharing practices
+                          that enable appropriate attribution, appropriate access and appropriate authority. As
+                          researchers we are committed to the
+                          <a href="https://www.go-fair.org/fair-principles/" target="_blank">FAIR (Findable, Accessible, Interoperable, Reusable)</a>
+                          guiding principles for managing scientific data and stewardship and
+                          <a href="https://www.gida-global.org/care" target="_blank">CARE (Collective Benefit,
+                          Authority to Control, Responsibility, Ethics)</a> guiding principles for Indigenous data governance.
+                      </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-8 col-12 my-auto">
+                      <h3>Local Contexts Hub | Collaborative Communication</h3>
+                      <p class="pe-md-5 mb-4">
+                          As part of the collaboration between Maine-eDNA and Local Contexts, Maine-eDNA has created a
+                          long-term institutional account on the Local Contexts Hub under the
+                          <a href="https://umaine.edu/mcge/" target="_blank">Maine Center for Genetics in the Environment (MCGE)</a>.<br>
+
+                          The <a href="https://localcontexts.org/tk-label-hub/" target="_blank">Local Contexts Hub</a>
+                          is a platform for communication and collaboration between communities,
+                          institutions, and researchers. Using the Hub, researchers can submit Projects and attach Notices
+                          to alert Indigenous communities of research activities, who can then customize and attach provenance,
+                          protocol, or permission Labels to that Project to give context on how the data should be used.
+                          With the institutional account, researchers aligned with Maine-eDNA do not have to create separate
+                          Researcher profiles for Maine-eDNA projects, though profiles may be created for better communication.
+
+                          <a href="https://localcontexts.org/tk-label-hub/" class="text-info icon-move-right" target="_blank">Sign up or learn more about the Local Contexts Hub
+                              <i class="fas fa-arrow-right text-sm ms-1"></i>
+                          </a>
+                      </p>
+                  </div>
+                  <div class="col-md-4 col-12 my-auto">
+                      <a target="_blank" href="https://umaine.edu/mcge/">
+                          <img class="w-100 border-radius-lg shadow-lg p-2" style="background-color:#16A085" src="https://storage.googleapis.com/anth-ja77-local-contexts-8985.appspot.com/users/institution-images/d19200a8-5b51-433c-9adb-2083c12a42de.png?Expires=1657308212&GoogleAccessId=localcontexts-django-storage%40anth-ja77-local-contexts-8985.iam.gserviceaccount.com&Signature=2Mf2XKcwX5QngJIQMC5RvZYlun08Yek%2BObmEe4jlcAfajdrqkF4Mw6MDupifr6GYMOXGMaSGUZUeIv%2Fp0yM4dxqAyg8LyynwqRtLdQjXgk84OnZa4StyS9%2Flr1%2FJ2217WRLZGrfLHHOJ%2BBF4auHYnuASaBd4dSbdxyj0grxuKf2p79Mypi5s0L6jOp3tq7zV0%2BZXh30jRr0lkvP4wc2rbJc6L0pN91o1dQAEQCrZLo%2BMtxXUfLrQV00PTzOAztyEqS1EWLpbkBdrzO%2FgYKZsVcORvi15GrhnTszYhGgGGHWHp28cCdPdZkDt8wzHZ2z3iLNbXAY8KPS3hO01yt2b7Q%3D%3D" alt="maine center for genetics in the environment logo">
+                      </a>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-12 col-12 my-auto">
+                      <h3>Contact Information</h3>
+                      <p class="pe-md-5 mb-4">
+                          If you are interested in collaborating with Indigenous partners please contact Darren Ranco at
+                          <a href="mailto:darren.ranco@maine.edu">darren.ranco@maine.edu</a>.
+                          For more information about Local Contexts directly, please contact Local Contexts support at
+                          <a href="mailto:support@localcontexts.org">support@localcontexts.org"</a>.
+                      </p>
                   </div>
               </div>
             <!-- -------- START loop -------- -->
@@ -108,14 +167,14 @@
                     <a href="{% url 'detail_localcontexts' project.pk %}">
                         {% if project.project_goals %}
                         <div class="row">
-                        <h5 class="font-weight-bolder mt-3">{{ project.project_label }} Goals</h5>
-                        <p class="pe-5">{{ project.project_goals }}</p>
+                          <h5 class="font-weight-bolder mt-3">{{ project.project_label }} Goals</h5>
+                          <p class="pe-5">{{ project.project_goals }}</p>
                         </div>
                         {% endif %}
                         {% if project.project_description %}
                         <div class="row">
-                            <h5 class="font-weight-bolder mt-3">{{ project.project_label }} Description</h5>
-                            <p class="pe-5">{{ project.project_description }}</p>
+                          <h5 class="font-weight-bolder mt-3">{{ project.project_label }} Description</h5>
+                          <p class="pe-5">{{ project.project_description }}</p>
                         </div>
                         {% endif %}
                     </a>
