updated formatting of localcontexts frontend main page

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -59,7 +59,7 @@
                           Local Contexts is an international organization founded in 2010 to “enhance and legitimize
                           locally based decision-making and Indigenous governance frameworks for determining ownership,
                           access, and culturally appropriate conditions for sharing historical, contemporary and future
-                          collections of cultural heritage and Indigenous data.”
+                          collections of cultural heritage and Indigenous data.”<br>
 
                           <a href="https://localcontexts.org/" class="text-info icon-move-right" target="_blank">More about Local Contexts
                               <i class="fas fa-arrow-right text-sm ms-1"></i>
@@ -85,18 +85,8 @@
                           and environmental data within the digital environment. Traditional Knowledge and Biocultural
                           Notices, applied by a researcher or institution, signal the right of Indigenous communities
                           to define the use of information, collections, and data (including Digital Sequence Information,
-                          DSI) generated from biodiversity and genetic resources associated with traditional lands or waters.
-                      </p>
-                  </div>
-                  <div class="col-md-4 col-12 my-auto">
-                      <a target="_blank" href="https://localcontexts.org/labels/biocultural-labels/">
-                          <img class="w-100 border-radius-lg shadow-lg p-2" style="background-color:#16A085" src="https://localcontexts.org/wp-content/uploads/2020/11/BC-BLACK-NOTICE-20-AUG-2020.png" alt="biocultural label">
-                      </a>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-md-12 col-12 my-auto">
-                      <p class="pe-md-5 mb-4">
+                          DSI) generated from biodiversity and genetic resources associated with traditional lands or waters.<br>
+
                           As participants in the Maine-eDNA Project, we respectfully acknowledge that we are conducting
                           research on the Homelands of the Penobscot, Passamaquoddy, Maliseet, and Mi’kmaq Wabanaki
                           Tribal Nations. When partnering with Tribal Nations, Maine-eDNA promotes data sharing practices
@@ -107,6 +97,11 @@
                           <a href="https://www.gida-global.org/care" target="_blank">CARE (Collective Benefit,
                           Authority to Control, Responsibility, Ethics)</a> guiding principles for Indigenous data governance.
                       </p>
+                  </div>
+                  <div class="col-md-4 col-12 my-auto">
+                      <a target="_blank" href="https://localcontexts.org/labels/biocultural-labels/">
+                          <img class="w-100 border-radius-lg shadow-lg p-2" src="https://localcontexts.org/wp-content/uploads/2020/11/BC-BLACK-NOTICE-20-AUG-2020.png" alt="biocultural label">
+                      </a>
                   </div>
               </div>
               <div class="row">
@@ -123,7 +118,7 @@
                           to alert Indigenous communities of research activities, who can then customize and attach provenance,
                           protocol, or permission Labels to that Project to give context on how the data should be used.
                           With the institutional account, researchers aligned with Maine-eDNA do not have to create separate
-                          Researcher profiles for Maine-eDNA projects, though profiles may be created for better communication.
+                          Researcher profiles for Maine-eDNA projects, though profiles may be created for better communication.<br>
 
                           <a href="https://localcontexts.org/tk-label-hub/" class="text-info icon-move-right" target="_blank">Sign up or learn more about the Local Contexts Hub
                               <i class="fas fa-arrow-right text-sm ms-1"></i>
@@ -132,7 +127,7 @@
                   </div>
                   <div class="col-md-4 col-12 my-auto">
                       <a target="_blank" href="https://umaine.edu/mcge/">
-                          <img class="w-100 border-radius-lg shadow-lg p-2" style="background-color:#16A085" src="https://storage.googleapis.com/anth-ja77-local-contexts-8985.appspot.com/users/institution-images/d19200a8-5b51-433c-9adb-2083c12a42de.png?Expires=1657308212&GoogleAccessId=localcontexts-django-storage%40anth-ja77-local-contexts-8985.iam.gserviceaccount.com&Signature=2Mf2XKcwX5QngJIQMC5RvZYlun08Yek%2BObmEe4jlcAfajdrqkF4Mw6MDupifr6GYMOXGMaSGUZUeIv%2Fp0yM4dxqAyg8LyynwqRtLdQjXgk84OnZa4StyS9%2Flr1%2FJ2217WRLZGrfLHHOJ%2BBF4auHYnuASaBd4dSbdxyj0grxuKf2p79Mypi5s0L6jOp3tq7zV0%2BZXh30jRr0lkvP4wc2rbJc6L0pN91o1dQAEQCrZLo%2BMtxXUfLrQV00PTzOAztyEqS1EWLpbkBdrzO%2FgYKZsVcORvi15GrhnTszYhGgGGHWHp28cCdPdZkDt8wzHZ2z3iLNbXAY8KPS3hO01yt2b7Q%3D%3D" alt="maine center for genetics in the environment logo">
+                          <img class="w-100 border-radius-lg shadow-lg p-2" src="https://storage.googleapis.com/anth-ja77-local-contexts-8985.appspot.com/users/institution-images/d19200a8-5b51-433c-9adb-2083c12a42de.png?Expires=1657308212&GoogleAccessId=localcontexts-django-storage%40anth-ja77-local-contexts-8985.iam.gserviceaccount.com&Signature=2Mf2XKcwX5QngJIQMC5RvZYlun08Yek%2BObmEe4jlcAfajdrqkF4Mw6MDupifr6GYMOXGMaSGUZUeIv%2Fp0yM4dxqAyg8LyynwqRtLdQjXgk84OnZa4StyS9%2Flr1%2FJ2217WRLZGrfLHHOJ%2BBF4auHYnuASaBd4dSbdxyj0grxuKf2p79Mypi5s0L6jOp3tq7zV0%2BZXh30jRr0lkvP4wc2rbJc6L0pN91o1dQAEQCrZLo%2BMtxXUfLrQV00PTzOAztyEqS1EWLpbkBdrzO%2FgYKZsVcORvi15GrhnTszYhGgGGHWHp28cCdPdZkDt8wzHZ2z3iLNbXAY8KPS3hO01yt2b7Q%3D%3D" alt="maine center for genetics in the environment logo">
                       </a>
                   </div>
               </div>
